# assignment_collatz-conjecture

code/client/: CMakeLists.txt  client.cpp
code/server/: CMakeLists.txt  server.cpp
